apps/inventree/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventree
  namespace: inventree
  labels:
    app.kubernetes.io/instance: inventree
    app.kubernetes.io/name: inventree
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app.kubernetes.io/instance: inventree
      app.kubernetes.io/name: inventree
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: inventree
        app.kubernetes.io/name: inventree
    spec:
      serviceAccountName: inventree
        
      containers:
        - name: inventree
          # ИЗМЕНЕНО: Указан ваш кастомный образ
          image: ghcr.io/sharkdeveloper/rp.store:latest
          # РЕКОМЕНДУЕТСЯ: Always для кастомных сборок
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1536Mi"
              cpu: "1000m"
          volumeMounts:
            - name: inventree-data
              mountPath: /home/inventree/data
              
        - name: inventree-proxy
          # НЕ ИЗМЕНЕНО: Оставляем стандартный nginx
          image: nginx:stable
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          volumeMounts:
            - name: proxy-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: inventree-data
              mountPath: /var/www
      volumes:
        - name: proxy-conf
          configMap:
            name: nginx-proxy-config
            defaultMode: 420
        - name: inventree-data
          persistentVolumeClaim:
            claimName: inventree-data
