apps/inventree/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventree-worker
  namespace: inventree
  labels:
    app.kubernetes.io/instance: inventree
    app.kubernetes.io/name: inventree-worker
spec:
  replicas: 1
  securityContext:
        fsGroup: 999 
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app.kubernetes.io/instance: inventree
      app.kubernetes.io/name: inventree-worker
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: inventree
        app.kubernetes.io/name: inventree-worker
    spec:
      serviceAccountName: inventree
      containers:
        - name: inventree
          image: inventree/inventree:1.4.3
          imagePullPolicy: IfNotPresent
          command: ["invoke", "worker"]
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          volumeMounts:
            - name: inventree-data
              mountPath: /home/inventree/data
      volumes:
        - name: inventree-data
          persistentVolumeClaim:
            claimName: inventree-data
