apps/inventree/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventree
  namespace: inventree
  labels:
    app.kubernetes.io/instance: inventree
    app.kubernetes.io/name: inventree
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: inventree
    app.kubernetes.io/name: inventree
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: proxy
      port: 80
      protocol: TCP
      targetPort: 80
